--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -34,7 +34,7 @@ html, body {
 }
 
 .password {
-	position:relative;
+	position:absolute;;
 	top: 50%;
 	transform: translateY(-50%);
 	z-index:3;
@@ -48,6 +48,7 @@ html, body {
 	width:20%;
 	padding:10px;
 	border:0;
+	font-size:18px;
 }
 
 .password button {
@@ -56,6 +57,8 @@ html, body {
 	color:#00FF00;
 	background:#000;
 	border:0;
+	font-size:18px;
+	cursor: pointer;
 }
 
 .text textarea {
